--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Shopping List</string>
     <string name="add_new_shop_item_content_description">Add new shop item</string>
+    <string name="et_name">Name:</string>
+    <string name="et_count">Count:</string>
+    <string name="bt_save">save</string>
 </resources>
