--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="add_new_shop_item_content_description">Add new shop item</string>
     <string name="et_name">Name:</string>
     <string name="et_count">Count:</string>
-    <string name="bt_save">save</string>
+    <string name="btn_save">save</string>
+    <string name="error_input_name">Invalid name</string>
+    <string name="error_input_count">Invalid count</string>
 </resources>
